--- a/styles/index.css
+++ b/styles/index.css
@@ -18,4 +18,15 @@ html {
 
 li {
   list-style: none;
+}
+
+header {
+  height: 90vh;
+  background: url(/assets/img/Header\ main\ page.jpg) center/cover;
+}
+header .top-bar {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
 }/*# sourceMappingURL=index.css.map */
