--- a/styles/layout/_hero.scss
+++ b/styles/layout/_hero.scss
@@ -6,5 +6,13 @@ header {
         display: flex;
         justify-content: space-between;
         margin: 0 auto;
+        h5 {
+            font-family: $font2;
+            font-weight: bold;
+            font-size: 14px;
+        }
+        ul {
+            display: flex;
+        }
     }
 }
