--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -21,6 +21,19 @@ $white: #ffffff;
     padding: 0;
     box-sizing: border-box;
 }
+.button {
+    margin-top: 30px;
+    background: #f6c90e;
+    padding: 15px;
+    border: none;
+    font-family: $font2;
+    text-transform: uppercase;
+    font-weight: 700;
+
+    &:hover {
+        cursor: pointer;
+    }
+}
 @mixin h1 {
     font-family: $font1;
     font-size: 64px;
