--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -9,6 +9,44 @@
         url(/assets/fonts/librebaskerville-bold-webfont.woff2);
 }
 
+@mixin h1 {
+    font-family: $font1;
+    font-size: 64px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+@mixin h2 {
+    font-family: $font1;
+    font-size: 64px;
+    font-weight: bold;
+}
+@mixin h3 {
+    font-family: $font1;
+    font-size: 44px;
+    font-weight: bold;
+}
+@mixin h4 {
+    font-family: $font1;
+    font-size: 32px;
+    font-weight: bold;
+}
+@mixin h5 {
+    font-family: $font1;
+    font-size: 32px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+@mixin h6 {
+    font-family: $font1;
+    font-size: 28px;
+    font-weight: bold;
+}
+@mixin p {
+    font-family: $font2;
+    font-size: 26px;
+    font-weight: normal;
+}
+
 $font1: librebaskerville-bold, serif;
 $font2: satoshi-regular, sans-serif;
 $black: #242424;
@@ -17,8 +55,6 @@ $yellow: #f6c90e;
 $white: #ffffff;
 
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 html {
