--- a/styles/index.css
+++ b/styles/index.css
@@ -7,8 +7,6 @@
   src: url(/assets/fonts/librebaskerville-bold-webfont.woff) url(/assets/fonts/librebaskerville-bold-webfont.woff2);
 }
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
 
@@ -18,4 +16,144 @@ html {
 
 li {
   list-style: none;
+}
+
+.collection-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.collection-txt {
+  margin-left: 50px;
+}
+
+.collection-txt h4, .collection-txt p {
+  margin: 10px 0;
+}
+
+section.collection {
+  margin: 50px 60px;
+}
+
+.animations-content {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  margin: 50px 60px;
+}
+
+.animation-txt {
+  width: 50%;
+}
+
+.animation-txt h4, .animation-txt p {
+  margin: 10px 0;
+}
+
+h2 {
+  position: relative;
+}
+h2:after {
+  position: absolute;
+  content: "";
+  background: #ffffff;
+  height: 3px;
+  bottom: -10px;
+  left: 0;
+  width: 8%;
+}
+
+.animations h2 {
+  margin-left: 60px;
+}
+
+.savoir-button {
+  margin-top: 30px;
+  background: #F6C90E;
+  padding: 15px;
+  border: none;
+  font-family: satoshi-regular, sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.savoir-button:hover {
+  cursor: pointer;
+}
+
+.grid-wrapper > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid-wrapper > div > img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 5px;
+}
+
+.grid-wrapper {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: 200px;
+  grid-auto-flow: dense;
+}
+
+.grid-wrapper .wide {
+  grid-column: span 2;
+}
+
+.grid-wrapper .tall {
+  grid-row: span 2;
+}
+
+.grid-wrapper .big {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+.div1 {
+  grid-area: 1/1/3/2;
+}
+
+.div2 {
+  grid-area: 3/1/4/2;
+}
+
+.div3 {
+  grid-area: 2/2/4/3;
+}
+
+.div4 {
+  grid-area: 1/2/2/3;
+}
+
+.div5 {
+  grid-area: 1/3/2/4;
+}
+
+.div6 {
+  grid-area: 2/3/3/4;
+}
+
+.div7 {
+  grid-area: 3/3/4/4;
+}
+
+.grid-galerie img {
+  width: 449px;
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.section-events {
+  margin: 0 60px;
 }/*# sourceMappingURL=index.css.map */
