--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,3 +2,5 @@
 @import "./layout/hero";
 @import "./layout/infos-pratiques";
 @import "./layout/partenaires";
+@import "./layout/collection+animations";
+@import "./layout/galerie";
