--- a/styles/layout/_partenaires.scss
+++ b/styles/layout/_partenaires.scss
@@ -1,6 +1,7 @@
 .section-confiance {
     padding: 0 60px;
     margin-top: 150px;
+    margin-bottom: 150px;
     h2 {
         @include h2;
         margin-bottom: 90px;
