--- a/styles/layout/_infos-pratiques.scss
+++ b/styles/layout/_infos-pratiques.scss
@@ -1,6 +1,7 @@
 .section-infos {
     background: $grey;
     padding: 0 60px;
+    padding-top: 100px;
     h2 {
         @include h2;
         color: $white;
