--- a/styles/layout/_partenaires.scss
+++ b/styles/layout/_partenaires.scss
@@ -22,11 +22,14 @@
         margin-bottom: 100px;
     }
     .grid-partenaire {
-        width: 60%;
+        width: 70%;
 
         margin: 0 auto;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
+        img {
+            margin-left: 30px;
+        }
     }
 }
