--- a/styles/layout/_galerie.scss
+++ b/styles/layout/_galerie.scss
@@ -1,31 +1,46 @@
+.section-galerie {
+    margin: 100px 60px 0 60px;
+}
+h3 {
+    position: relative;
+    margin-bottom: 100px;
+    &:after {
+        position: absolute;
+        content: "";
+        background: $black;
+        height: 3px;
+        bottom: -10px;
+        left: 0;
+        width: 8%;
+    }
+}
 .grid-wrapper > div {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .grid-wrapper > div > img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .grid-wrapper {
-	display: grid;
-	grid-gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));	
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-auto-flow: dense;
     margin: 30px 15%;
 }
 
-
 .grid-wrapper .tall {
-	grid-row: span 2;
+    grid-row: span 2;
 }
 
 .grid-galerie img {
     width: 449px;
-	vertical-align: middle;
-	object-fit: cover;
+    vertical-align: middle;
+    object-fit: cover;
 }
 
 .section-events {
