--- a/styles/index.css
+++ b/styles/index.css
@@ -495,19 +495,22 @@ footer .under-footer ul li {
 .section-acces .grid-acces {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 30% 70%;
   grid-template-areas: "txt icons" "map map";
 }
 .section-acces .grid-acces p {
   grid-area: txt;
   width: 50%;
+  font-weight: bold;
 }
 .section-acces .grid-acces ul {
   grid-area: icons;
   display: flex;
+  justify-content: flex-end;
 }
 .section-acces .grid-acces ul li {
-  font-size: 2rem;
+  font-size: 2.5rem;
+  margin-left: 70px;
 }
 .section-acces .grid-acces iframe {
   grid-area: map;
