--- a/styles/layout/_galerie.scss
+++ b/styles/layout/_galerie.scss
@@ -14,35 +14,45 @@ h3 {
         width: 8%;
     }
 }
+
 .grid-wrapper > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .grid-wrapper > div > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .grid-wrapper {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	display: grid;
+	grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));	
     grid-auto-flow: dense;
     margin: 30px 15%;
 }
 
 .grid-wrapper .tall {
-    grid-row: span 2;
+	grid-row: span 2;
 }
 
 .grid-galerie img {
     width: 449px;
-    vertical-align: middle;
-    object-fit: cover;
+	vertical-align: middle;
+	object-fit: cover;
 }
 
 .section-events {
+    margin: 0 60px;
+}
+
+.decouvrir {
+    display: flex;
+    justify-content: center;
+}
+
+section.section-galerie {
     margin: 0 60px;
 }
