--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,3 +6,5 @@
 @import "./layout/galerie";
 @import "./layout/footer";
 @import "./layout/acces";
+@import "./layout/association";
+@import "./layout/evenements";
