--- a/styles/layout/_infos-pratiques.scss
+++ b/styles/layout/_infos-pratiques.scss
@@ -22,6 +22,9 @@
         margin-top: 40px;
         padding-bottom: 150px;
         justify-content: center;
+        button {
+            width: 150px;
+        }
         p {
             @include p;
             color: $white;
@@ -34,9 +37,15 @@
             margin-bottom: 50px;
             @include h3;
             color: $white;
+            &:after {
+                display: none;
+            }
         }
 
         .tarifs {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             margin-right: 50px;
             width: 40%;
             background: url(/assets/img/tarifs.jpg) center/cover;
@@ -51,10 +60,14 @@
             }
         }
         .horaires {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             background: url(/assets/img/horraires.jpg) center/cover;
             width: 40%;
 
             padding: 80px 30px 35px 40px;
+
             .avril {
                 margin-bottom: 50px;
             }
