--- a/styles/index.css
+++ b/styles/index.css
@@ -438,6 +438,15 @@ h3:after {
   margin: 0 60px;
 }
 
+.decouvrir {
+  display: flex;
+  justify-content: center;
+}
+
+section.section-galerie {
+  margin: 0 60px;
+}
+
 footer {
   background: #1e1e1e;
   color: #ffffff;
@@ -545,6 +554,7 @@ footer .under-footer ul li {
   grid-area: map;
   width: 80%;
   margin: 0 auto;
+  margin-bottom: 150px;
 }
 
 .association h2 {
@@ -606,18 +616,25 @@ footer .under-footer ul li {
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
+  margin-top: 70px;
+}
+.events .titre h2 {
+  margin-bottom: 70px;
+}
+.events .titre h2:after {
+  background: #ffffff;
 }
 .events .container article {
   width: 399px;
   color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .events .container article img {
   height: 425px;
   width: 399px;
-}
-.events hr {
-  width: 40px;
-  margin-bottom: px;
+  margin-bottom: 30px;
 }
 .events p {
   width: 100%;
@@ -656,4 +673,5 @@ footer .under-footer ul li {
 }
 .events h4 {
   font-size: 32px;
+  margin-bottom: 20px;
 }/*# sourceMappingURL=index.css.map */
