--- a/styles/layout/_evenements.scss
+++ b/styles/layout/_evenements.scss
@@ -1,26 +1,33 @@
 .events {
-    background-color: #393e46;
+    background-color: $grey;
 
     .container {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+
         gap: 20px;
+        margin-top: 70px;
+    }
+    .titre h2 {
+        margin-bottom: 70px;
+        &:after {
+            background: $white;
+        }
     }
 
     .container article {
         width: 399px;
         color: aliceblue;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     .container article img {
         height: 425px;
         width: 399px;
-    }
-
-    hr {
-        width: 40px;
-        margin-bottom: px;
+        margin-bottom: 30px;
     }
 
     p {
@@ -66,5 +73,6 @@
     }
     h4 {
         font-size: 32px;
+        margin-bottom: 20px;
     }
 }
