--- a/styles/index.css
+++ b/styles/index.css
@@ -608,70 +608,39 @@ footer .under-footer ul li {
   flex-wrap: wrap;
 }
 
-.events {
-  background-color: #393e46;
+.evenements {
+  color: #ffffff;
+  background: #393e46;
+  padding: 100px 60px 100px 60px;
 }
-.events .container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 70px;
-}
-.events .titre h2 {
-  margin-bottom: 70px;
-}
-.events .titre h2:after {
+.evenements h2:after {
   background: #ffffff;
 }
-.events .container article {
-  width: 399px;
-  color: aliceblue;
-  display: flex;
-  flex-direction: column;
+.evenements .events-container {
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
   justify-content: space-between;
 }
-.events .container article img {
-  height: 425px;
-  width: 399px;
-  margin-bottom: 30px;
+.evenements .events-container .events {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  margin-right: 50px;
+  margin-top: 100px;
 }
-.events p {
+.evenements .events-container .events .img-container img {
+  height: 100%;
   width: 100%;
-  color: aliceblue;
-}
-.events .container_texte {
-  padding-right: 40px;
-}
-.events .img_container {
   -o-object-fit: cover;
      object-fit: cover;
 }
-.events .titre {
-  font-size: 64px;
-  margin-left: 170px;
-  color: white;
-  padding-top: 100px;
+.evenements .events-container .events h4 {
+  margin-top: 40px;
+  margin-bottom: 30px;
 }
-.events .titre2 {
-  font-size: 32;
+.evenements .events-container .events p {
+  margin-bottom: 25px;
 }
-.events .sous-titre {
-  font-size: 26px;
-}
-.events .savoir-button {
-  margin-top: 30px;
-  background: #f6c90e;
-  padding: 15px;
-  border: none;
-  font-family: satoshi-regular, sans-serif;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-.events .savoir-button:hover {
-  cursor: pointer;
-}
-.events h4 {
-  font-size: 32px;
-  margin-bottom: 20px;
+.evenements .events-container .events .button {
+  width: 150px;
 }/*# sourceMappingURL=index.css.map */
