--- a/styles/layout/_evenements.scss
+++ b/styles/layout/_evenements.scss
@@ -1,78 +1,41 @@
-.events {
-    background-color: $grey;
+.evenements {
+    color: $white;
+    background: $grey;
 
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-
-        gap: 20px;
-        margin-top: 70px;
-    }
-    .titre h2 {
-        margin-bottom: 70px;
+    padding: 100px 60px 100px 60px;
+    h2 {
         &:after {
             background: $white;
         }
     }
-
-    .container article {
-        width: 399px;
-        color: aliceblue;
-        display: flex;
-        flex-direction: column;
+    .events-container {
+        display: grid;
+        grid-template-columns: repeat(3, 33%);
         justify-content: space-between;
-    }
 
-    .container article img {
-        height: 425px;
-        width: 399px;
-        margin-bottom: 30px;
-    }
-
-    p {
-        width: 100%;
-        color: aliceblue;
-    }
-
-    .container_texte {
-        padding-right: 40px;
-    }
-
-    .img_container {
-        object-fit: cover;
-    }
-
-    .titre {
-        font-size: 64px;
-        margin-left: 170px;
-        color: white;
-        padding-top: 100px;
-    }
-
-    .titre2 {
-        font-size: 32;
-    }
-
-    .sous-titre {
-        font-size: 26px;
-    }
-
-    .savoir-button {
-        margin-top: 30px;
-        background: #f6c90e;
-        padding: 15px;
-        border: none;
-        font-family: satoshi-regular, sans-serif;
-        text-transform: uppercase;
-        font-weight: 700;
-    }
-
-    .savoir-button:hover {
-        cursor: pointer;
-    }
-    h4 {
-        font-size: 32px;
-        margin-bottom: 20px;
+        .events {
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+            margin-right: 50px;
+            margin-top: 100px;
+            .img-container {
+                img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                }
+            }
+            h4 {
+                margin-top: 40px;
+                margin-bottom: 30px;
+            }
+            p {
+                margin-bottom: 25px;
+            }
+            .button {
+                width: 150px;
+            }
+        }
     }
 }
