--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -98,3 +98,24 @@ html {
 li {
     list-style: none;
 }
+
+@media screen and (max-width: 600px) {
+    h1 {
+        font-size: 21px;
+    }
+    h2 {
+        font-size: 26px;
+    }
+    h3 {
+        font-size: 18px;
+    }
+    h4 {
+        font-size: 18px;
+    }
+    h5 {
+        font-size: 13px;
+    }
+    p {
+        font-size: 16px;
+    }
+}
