--- a/styles/index.css
+++ b/styles/index.css
@@ -632,57 +632,30 @@ footer .under-footer ul li {
   margin-bottom: 150px;
 }
 
-.association h2 {
-  font-family: librebaskerville-bold, serif;
-  font-size: 64px;
-  font-weight: bold;
-  margin-left: 60px;
-  padding-top: 100px;
+.section-col-association {
+  margin: 100px 60px 50px 60px;
+}
+.section-col-association .title-container {
   margin-bottom: 70px;
 }
-
-.association h4 {
-  margin: 10px 0;
-}
-
-.savoir-button {
-  margin-top: 30px;
-  background: #f6c90e;
-  padding: 15px;
-  border: none;
-  font-family: satoshi-regular, sans-serif;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-
-.association-txt {
-  width: 50%;
-}
-
-.association img {
-  width: 517px;
-  height: 545px;
-  left: 75px;
-  top: 6496px;
-}
-
-.association-content {
+.section-col-association .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 60px;
+}
+.section-col-association .container .association-txt {
+  width: 50%;
 }
 
-.association-txt {
-  margin-left: 50px;
-  margin-right: 60px;
+@media screen and (max-width: 767px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+  .association-txt {
+    padding-left: 0;
+  }
 }
-
-.container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .evenements {
   color: #ffffff;
   background: #393e46;
