--- a/styles/layout/_association.scss
+++ b/styles/layout/_association.scss
@@ -1,46 +1,26 @@
-.association h2 {
-    font-family: $font1;
-    font-size: 64px;
-    font-weight: bold;
-    margin-left: 60px;
-    padding-top: 100px;
-    margin-bottom: 70px;
-}
-.association h4 {
-    margin: 10px 0;
+.section-col-association {
+    margin: 100px 60px 50px 60px;
+    .title-container {
+        margin-bottom: 70px;
+    }
+
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .association-txt {
+            width: 50%;
+        }
+    }
 }
 
-.savoir-button {
-    margin-top: 30px;
-    background: #f6c90e;
-    padding: 15px;
-    border: none;
-    font-family: satoshi-regular, sans-serif;
-    text-transform: uppercase;
-    font-weight: 700;
-}
-.association-txt {
-    width: 50%;
-}
-.association img {
-    width: 517px;
-    height: 545px;
-    left: 75px;
-    top: 6496px;
-}
-.association-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 60px;
-}
+@media screen and (max-width: 767px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
 
-.association-txt {
-    margin-left: 50px;
-    margin-right: 60px;
-}
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
+    .association-txt {
+        padding-left: 0;
+    }
 }
